# Gym

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
docs/: how-to-faq.md
docs/tutorials/: 02-setup.md  03-your-first-agent.md  09-configuration-guide.md
nemo_gym/: base_resources_server.py  base_responses_api_agent.py  base_responses_api_model.py  cli.py  config_types.py  dataset_orchestrator.py  dataset_viewer.py  gitlab_utils.py  hf_utils.py  openai_utils.py  server_utils.py
resources/: resources_server_test_template.py
resources_servers/: .gitignore
resources_servers/comp_coding/: analyze_test_cases.py  app.py  livecodebench_accuracy_test.py
resources_servers/comp_coding/tests/: test_app.py
resources_servers/example_simple_weather/: README.md  app.py  client.py  create_examples.py
resources_servers/example_simple_weather/configs/: simple_weather.yaml
resources_servers/example_simple_weather/data/: example.jsonl  example_metrics.json  example_rollouts.jsonl
resources_servers/example_simple_weather/tests/: test_app.py
resources_servers/example_stateful_counter/: client.py  create_examples.py
resources_servers/example_stateful_counter/configs/: stateful_counter.yaml
resources_servers/example_stateful_counter/data/: .gitignore  example_metrics.json  example_rollouts.jsonl
resources_servers/example_stateful_counter/tests/: test_app.py
resources_servers/google_search/tests/: test_app.py
resources_servers/instruction_following/tests/: test_app.py
resources_servers/library_judge_math/: README.md
resources_servers/library_judge_math/configs/: math_stack_overflow.yaml
resources_servers/library_judge_math/data/: math_stack_overflow_train_metrics.json
resources_servers/library_judge_math/tests/: test_app.py
resources_servers/mcqa/tests/: test_app.py
resources_servers/mini_swe_agent/configs/: mini_swe_agent.yaml
resources_servers/multineedle/tests/: test_app.py
resources_servers/multiverse_math_hard/tests/: test_app.py
resources_servers/python_math_exec/tests/: test_app.py
resources_servers/simple_weather/tests/: test_app.py
resources_servers/stateful_counter/: README.md  app.py  client.py  create_examples.py  requirements.txt
resources_servers/stateful_counter/configs/: stateful_counter.yaml
resources_servers/stateful_counter/data/: example.jsonl  example_metrics.json
resources_servers/stateful_counter/tests/: test_app.py
resources_servers/workbench/tests/: test_app.py
responses_api_agents/mini_swe_agent/: app.py  requirements.txt  start_server.sh
responses_api_agents/simple_agent/: app.py
responses_api_agents/simple_agent/tests/: test_app.py
responses_api_agents/simple_agent_stateful/: app.py
responses_api_agents/simple_agent_stateful/tests/: test_app.py
responses_api_models/openai_model/tests/: test_app.py
responses_api_models/vllm_model/: app.py
responses_api_models/vllm_model/tests/: test_app.py
scripts/: update_resource_servers.py
tests/unit_tests/: test_base_resources_server.py  test_base_responses_api_agent.py  test_base_responses_api_model.py  test_cli.py  test_dataset_orchestrator.py  test_hf_utils.py
